Refactor admin into directory + fix some hierarchical

--- a/permissible/templates/admin/permissible_changeform.html
+++ b/permissible/templates/admin/permissible_changeform.html
@@ -68,7 +68,7 @@
                             </td>
                         {% endfor %}
                         <td>
-                            {{ users_to_perms|get_item:user|join:", " }}  <!-- Display user permissions with line breaks -->
+                            {{ users_to_perms|get_item:user|join:", " }}  <!-- Display user permissions -->
                         </td>
                     </tr>
                 {% endfor %}
