First pass of file edits for renaming

--- a/permissible/templates/admin/user_permissible_changeform.html
+++ b/permissible/templates/admin/user_permissible_changeform.html
@@ -32,7 +32,7 @@
         <div style="overflow-x: auto;">
             <table style="margin-bottom: 30px">
                 <tr style="background-color: #eee">
-                    <th rowspan="2">{{ perm_root_name|capfirst }}s</th>
+                    <th rowspan="2">{{ perm_domain_name|capfirst }}s</th>
                     <th colspan="{{ first_roles.keys|length|default:0 }}" style="text-align: center">Roles</th>
                     <th rowspan="2">Resulting permissions this user has</th>
                 </tr>
